fix footer img on mobile

--- a/more-projects/style.css
+++ b/more-projects/style.css
@@ -1141,7 +1141,7 @@ div::-webkit-scrollbar-thumb {
 	}
 	.footer {
 		background-size: 230px;
+		background-position: top left;
 	}
-
 
 }
