--- a/style.css
+++ b/style.css
@@ -1240,6 +1240,7 @@ ul {
 	}
 	.footer {
 		background-size: 230px;
+		background-position: top left;
 	}
 
 
